samples/_failures_safe/1761711708_fee237_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b888c2e0.c: In function ‘main’:
./samples/SAFE/__tmp_b888c2e0.c:163:5: error: expected expression at end of input
  163 |     for (int i = 0; i < edge_count;
      |     ^~~
./samples/SAFE/__tmp_b888c2e0.c:163:5: error: expected declaration or statement at end of input
